[package]
name = "staged-builder-internals"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Internal implementation details for staged-builder. Do not use directly."
repository = "https://github.com/sfackler/staged-builder"

[lib]
proc-macro = true

[dependencies]
heck = "0.4"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
