[package]
name = "staged-builder"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A proc macro which generates staged builders for types."
repository = "https://github.com/sfackler/staged-builder"
categories = ["no-std"]
keywords = ["builder", "staged", "telescopic"]

[dependencies]
staged-builder-internals = { version = "0.1.1", path = "../staged-builder-internals" }
